--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Editorial
 subtitle: by HTML5 UP
 email: youremailaddress@gmail.com
 description: A FREE AND FULLY RESPONSIVE SITE TEMPLATE
-baseurl: "/editorial-jekyll-theme" # the subpath of your site, e.g. /blog
+baseurl: "samchester" # the subpath of your site, e.g. /blog
 url: "https://schester1.github.io" # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
