--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Editorial
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A FREE AND FULLY RESPONSIVE SITE TEMPLATE
+title: Sam Chester
+subtitle: PhD Cnadidate
+email: schester@ldeo.columbia.edu
+description: Sam Chester
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://schester1.github.io" # the base hostname & protocol for your site
 author:
