--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Sam Chester
-subtitle: PhD Cnadidate
+subtitle: PhD Candidate
 email: schester@ldeo.columbia.edu
 description: Sam Chester
 baseurl: "" # the subpath of your site, e.g. /blog
